fixed: multielement wrap with radios in it

--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -1,6 +1,13 @@
 @use '../../../plugins/sim-plugin/includes/css/scss/global' as *;
 
 .sim-form-wrapper{
+	input:disabled {
+		border: none;
+		padding: 0;
+		font-weight: bold;
+		font-size: inherit;
+	}
+
 	.formfield-input:not(input[type='radio']){
 		float:left;
 	}
